# mmaid-go

./: .SRCINFO  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PKGBUILD  README.md  go.mod  mmaid.go  mmaid_test.go  pyproject.toml  termaid.go  termaid_test.go  test_visual.sh
.github/workflows/: ci.yml  publish.yml
cmd/mmaid/: main.go
cmd/termaid/: main.go
demo/: demo-script.sh  demo.tape  mmaid-demo.cast  record.sh
docs/architecture/: INDEX.md  adr.yaml
internal/diagram/: blockdiagram.go  classdiagram.go  diagram_test.go  erdiagram.go  erdiagram_render.go  erdiagram_test.go  gantt.go  gitgraph.go  kanban.go  mindmap.go  piechart.go  quadrant.go  sequence.go  state.go  terminal.go  terminal_scale.go  terminal_windows.go  timeline.go  treemap.go  xychart.go
internal/graph/: model.go  model_test.go
internal/ingest/: ingest.go  ingest_test.go  pie.go  sanitize.go  template.go  treemap.go
internal/layout/: grid.go  layout_test.go
internal/parser/: flowchart.go  flowchart_test.go
internal/renderer/: canvas.go  canvas_test.go  charset.go  draw.go  shapes.go  theme.go
internal/routing/: pathfinder.go  router.go  routing_test.go
tests/: conftest.py  test_blockdiagram.py  test_classdiagram.py  test_cli.py  test_corner_cases.py  test_edge_styles.py  test_erdiagram.py  test_gitgraph.py  test_integration.py  test_layout.py  test_parser.py  test_parser_comprehensive.py  test_piechart.py  test_renderer.py  test_routing.py  test_sequence.py  test_shapes.py  test_snapshots.py  test_state_diagram.py  test_themes.py  test_warnings.py
(+162 files in other folders)
